--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "wizipedia",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint",
+    "lint": "expo lint src",
+    "lint:fix": "expo lint src --fix",
+    "format": "prettier --check src",
+    "format:fix": "prettier --write src",
     "prepare": "husky"
   },
   "dependencies": {
@@ -43,10 +47,8 @@
     "@commitlint/config-conventional": "20.4.1",
     "@types/react": "~19.1.17",
     "eslint": "^9.39.2",
-    "eslint-config-expo": "~10.0.0",
+    "eslint-config-expo-magic": "1.6.1",
     "eslint-config-prettier": "10.1.8",
-    "eslint-config-universe": "15.0.3",
-    "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-prettier": "5.5.5",
     "eslint-plugin-react-hooks": "7.0.1",
     "husky": "9.1.7",
