--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,3 @@
 {
-  "*.{ts,tsx,js,jsx}": ["eslint src --max-warnings=0", "prettier src --check"]
+  "*.{ts,tsx,js,jsx}": ["prettier src --check", "eslint src --max-warnings=0"]
 }
